--- a/MobileCamApp/MobileCamApp/Main_iPhone.storyboard
+++ b/MobileCamApp/MobileCamApp/Main_iPhone.storyboard
@@ -628,33 +628,6 @@
             </objects>
             <point key="canvasLocation" x="675.36231884057975" y="932.8125"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="8iE-Cx-sRM">
-            <objects>
-                <navigationController id="yi8-HT-dM2" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="WIX-ea-96u">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="FMw-xs-qCX" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="13.043478260869566" y="932.8125"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="D9K-f5-BvW">
-            <objects>
-                <navigationController id="Yd0-04-iMs" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="PsV-yP-Voq"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="HIo-eI-PmD">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7J6-QX-uDA" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1360.8695652173915" y="932.8125"/>
-        </scene>
         <!--Portrait NavVC-->
         <scene sceneID="PAm-MC-eR4">
             <objects>
@@ -1006,7 +979,7 @@
                 <navigationController id="EYJ-u9-hV9" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="mxA-Ik-C9N"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="86j-58-VPq">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -1135,7 +1108,7 @@
             <objects>
                 <tableViewController id="9Pe-fa-O21" customClass="ChangeSSIDViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="uYK-PX-i57">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="436"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="430"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <prototypes>
@@ -1208,7 +1181,7 @@
                     <nil key="simulatedStatusBarMetrics"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="8kK-b0-6xJ">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="r6K-KQ-G2N">
@@ -1406,7 +1379,7 @@
         <scene sceneID="5ue-Nu-ge8">
             <objects>
                 <collectionViewController autoresizesArchivedViewToFullSize="NO" id="5Ze-W0-53N" customClass="MpbViewController" sceneMemberID="viewController">
-                    <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="7on-9B-xRt">
+                    <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="7on-9B-xRt">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="387"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
